Archive/1bd4212a445e3a90a905330e94fa1a42-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘auto foo()’:
main.cpp:5:23: error: returning initializer list
     return {1, 2, 3, 4};
                       ^
main.cpp: In function ‘int main()’:
main.cpp:10:20: error: ‘void ret’ has incomplete type
     auto ret = foo();
                    ^
